[project]
name = "legal-contract-review"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"models.py" = "models.py"
"client.py" = "client.py"
"my_env.py" = "my_env.py"

[tool.hatch.build.targets.sdist]
include = [
    "server/**",
    "models.py",
    "client.py",
    "my_env.py",
    "openenv.yaml",
    "README.md",
    "inference.py",
    "pyproject.toml",
    "Dockerfile",
]